--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -26,7 +26,7 @@
             <input type="text" class="form-control" id="tutor" placeholder="Tutor Class">
         </div>
 
-        <button type="button" class="btn btn-primary btn-lg">Submit</button>
+        <button type="button" class="btn btn-primary btn-lg" onclick="success()">Submit</button>
     </div>
     <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
         <a href="/source">Source Code</a></p>
