--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -18,7 +18,7 @@
     <h5>For contact tracing purposes, all students who take buses must check in.</h5>
 
     <div class="checkin-container">
-        <h3 class="bus-info"><%= currentDay %> <%= date %> (AM) - Bus <%= busNumber %></h3>
+        <h3 class="bus-info"><%= currentDay %> <%= date %> (<%= ampm %>) - Bus <%= busNumber %></h3>
         <div class="mb-3 container-form">
             <input type="text" class="form-control" id="name" placeholder="Full Name">
         </div>
