--- a/static/style.css
+++ b/static/style.css
@@ -57,3 +57,7 @@ h5 {
     padding-right: 20px;
     padding-top: 10px;
 }
+
+.swal2-styled.swal2-confirm {
+    background-color: #005A4E !important;
+}
