--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -17,17 +17,22 @@
     <h1 class="welcome">Good morning,</h1>
     <h5>For contact tracing purposes, all students who take buses must check in.</h5>
 
-    <div class="checkin-container">
+    <form class="checkin-container" method="POST" action="/api/v1/check-in">
         <h3 class="bus-info"><%= currentDay %> <%= date %> (<%= ampm %>) - Bus <%= busNumber %></h3>
         <div class="mb-3 container-form">
-            <input type="text" class="form-control" id="name" placeholder="Full Name">
+            <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
         </div>
         <div class="mb-3 container-form">
-            <input type="text" class="form-control" id="tutor" placeholder="Tutor Class">
+            <input type="text" class="form-control" id="tutor" name="class" placeholder="Tutor Class">
         </div>
 
-        <button type="button" class="btn btn-primary btn-lg" onclick="success()">Submit</button>
-    </div>
+        <!-- Values for POST -->
+        <input type="text" style="display: none !important;" name="bus" value="<%= busNumber %>">
+        <input type="text" style="display: none !important;" name="date" value="<%= date %>">
+        <input type="text" style="display: none !important;" name="journey" value="<%= ampm %>">
+
+        <button type="submit" class="btn btn-primary btn-lg" onclick="success()">Submit</button>
+    </form>
     <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
         <a href="/source">Source Code</a></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
