--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -1,3 +1,7 @@
+<!-- This is Leopard. -->
+
+<title>Leopard</title>
+<style>body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}</style>
 <img src="https://www.pngmart.com/files/3/Leopard-PNG-File.png" height="100">
 <br><br>
 <p><%- body %></p>
