Redirect to admin page after login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
     <div id="user_div" class="loggedin-div">
         <h1>Leopard</h1>
         <p id="user_para">Loading...</p>
-        <button id="dashboard-button" onclick="window.location.href = '/dashboard';" style="margin-bottom: 20px;">Dashboard</button></a>
+        <button id="dashboard-button" onclick="window.location.href = '/admin';" style="margin-bottom: 20px;">Dashboard</button></a>
         <button id="logout-button" onclick="logout()">Logout</button>
       </div>
 
