--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,7 +17,8 @@
     <h1 class="welcome">Admin Area</h1>
 
     <div class="privacy-container">
-        <p>You're here!</p>
+        <h3>Please select a date:</h3>
+        <% console.log('test') %>
     </div>
     <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> | <a href="/source">Source Code</a></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
