Back button on results page

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -27,6 +27,7 @@
         <% } else { %>
         <h3>No results found.</h3>
         <% } %>
+        <h6><a class="back" href="/admin">Click here to go back</a></h6>
     </div>
     <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
         <a href="/source">Source Code</a></p>
