--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -34,7 +34,7 @@
         <input type="text" style="display: none !important;" name="date" value="<%= date %>">
         <input type="text" style="display: none !important;" name="journey" value="<%= ampm %>">
 
-        <button type="submit" class="btn btn-primary btn-lg" onclick="success()">Submit</button>
+        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
     </form>
     <p><br><!--Powered by Leopard, a check-in system for students by Noah Ball.<br>--><a href="/privacy">Privacy Policy</a> |
         <a href="/source">Source Code</a></p>
