--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,7 +40,7 @@
         <h1 style="font-family: Bukhari Script;">Patience</h1>
         <p id="user_para">Hey there!</p>
         <button onclick="logout()">Logout</button>
-      </div>--.
+      </div>-->
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
