--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,19 +9,20 @@
 <body>
     <div id="login_div" class="main-div">
         <h1>Leopard</h1>
+        <input type="text" placeholder="Full Name" id="name_field" />
         <input type="email" placeholder="Email" id="email_field" />
         <input type="password" placeholder="Password" id="password_field" />
 
-        <button onclick="login()">Login</button>
+        <button onclick="signUp()">Signup</button>
         <small>
-            <center><br>Copyright © 2021 Leopard.</center>
+            <center><br>Copyright © 2020 Noah Ball.</center>
         </small>
     </div>
 
     <div id="user_div" class="loggedin-div">
         <h1>Leopard</h1>
         <p id="user_para">Loading...</p>
-        <button id="logout-button" onclick="logout()">Logout</button>
+        <button onclick="logout()">Logout</button>
     </div>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
