--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -21,26 +21,48 @@
     <h5>This school uses Leopard, a contact tracing system for school buses.</h5>
 
     <div class="privacy-container">
-        <p>Leopard is designed to collect as little information as possible (while still being able to effectively trace you if needed).</p>
+        <p>Leopard is designed to collect as little information as possible (while still being able to effectively trace
+            you if needed).</p>
         <h3>Data Leopard Collects</h3>
         <p>Leopard collects the following information:</p>
         <ul>
             <li>Full Name</li>
             <li>Tutor Class</li>
             <li>Bus that the student took</li>
-            <li>Date/time that the user took the bus</li>
+            <li>Date/time that the student took the bus</li>
         </ul>
-        <p>Leopard requires this data to provide this service to you. You can opt out by choosing to use the paper form provided by a teacher instead of Leopard.</p>
+        <p>Leopard requires this data to provide this service to you. You can opt out by choosing to use the paper form
+            provided by a teacher instead of Leopard.</p>
         <h3>Who we share your data with</h3>
-        <p>Your data is stored on Leopard's servers. Only your school's administrative team can see lists of who has checked in. These lists are designed for contact tracing purposes, however schools can use them for other purposes if required.<br><b>Leopard does not share your data with any other third parties.</b></p>
+        <p>Your data is stored on Firebase and can only be accessed by Leopard's servers (which in turn pass this
+            information on to your school's administrative team). Only your school's administrative team can see lists
+            of who has checked in. These lists are designed for contact tracing purposes, however schools can use them
+            for other purposes if required.<br><b>Leopard does not share your data with any other third parties.</b></p>
+        <h3>3rd-party Services</h3>
+        <ul>
+            <li>Firebase RTDB - all user data is stored here.</li>
+            <li>Firebase Authentication - used to store admin accounts. Your email address, randomly generated user ID
+                and password are stored here. No-one can view your password, even Leopard's developers.</li>
+            <li>reCAPTCHA - reCAPTCHA generates a unique token which is used by Leopard's server to verify that you're
+                not a bot. No personal information is sent to reCAPTCHA.</li>
+        </ul>
+        <h3>Cookies that we set</h3>
+        <p>idToken: This is only set when visiting the admin area and identifies the currently signed in user<br>Other
+            cookies may be set by 3rd-party services, which are out of our control.</p>
         <h3>How long we store your data</h3>
-        <p>Your data is stored on Leopard's servers for as long as deemed necessary by your school's administrative team. This can be from as little as 14 days to forever. Contact your school directly for more information.</p>
+        <p>Your data is stored on Leopard's servers for as long as deemed necessary by your school's administrative
+            team. This can be from as little as 14 days to forever. Contact your school directly for more information.
+        </p>
         <h3>What rights you have over your data</h3>
-        <p>You can request for your data to be deleted by emailing your school's administrative team, however this data cannot be removed until 60 days after the data entered our systems.</p>
+        <p>You can request for your data to be deleted by emailing your school's administrative team, however this data
+            cannot be removed until 60 days after the data entered our systems.</p>
         <h3>Getting in touch</h3>
-        <p>Queries regarding the Leopard service itself can be emailed to <a href="mailto:noah@noahball.com">noah@noahball.com</a>. For queries regarding the use case and application of Leopard, please contact your school directly.</p>
+        <p>Queries regarding the Leopard service itself can be emailed to <a
+                href="mailto:noah@noahball.com">noah@noahball.com</a>. For queries regarding the use case and
+            application of Leopard, please contact your school directly.<br><br><b>Updated: 20/09/2021</b></p>
     </div>
-    <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> | <a href="/source">Source Code</a></p>
+    <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
+        <a href="/source">Source Code</a></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
