--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Privacy | Leopard</title>
+    <title>Privacy | <%= schoolFullName %></title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <img class="school-logo" src="https://i0.wp.com/www.aquinas.school.nz/wp-content/uploads/2016/09/logo.png">
+    <img class="school-logo" src="<%= schoolLogo %>">
     <h1 class="welcome">Privacy Policy</h1>
-    <h5>This school uses Leopard, a contact tracing system for school buses.</h5>
+    <h5><%= schoolFullName %> uses Leopard, a contact tracing system for school buses.</h5>
 
     <div class="privacy-container">
         <p>Leopard is designed to collect as little information as possible (while still being able to effectively trace
@@ -35,8 +35,10 @@
             provided by a teacher instead of Leopard.</p>
         <h3>Who we share your data with</h3>
         <p>Your data is stored on Firebase and can only be accessed by Leopard's servers (which in turn pass this
-            information on to your school's administrative team). Only your school's administrative team can see lists
-            of who has checked in. These lists are designed for contact tracing purposes, however schools can use them
+            information on to <%= schoolFullName %>'s administrative team). Only <%= schoolFullName %>'s administrative team
+            can see lists
+            of who has checked in. These lists are designed for contact tracing purposes, however <%= schoolFullName %>
+            can use them
             for other purposes if required.<br><b>Leopard does not share your data with any other third parties.</b></p>
         <h3>3rd-party Services</h3>
         <ul>
@@ -50,22 +52,33 @@
         <p>idToken: This is only set when visiting the admin area and identifies the currently signed in user<br>Other
             cookies may be set by 3rd-party services, which are out of our control.</p>
         <h3>How long we store your data</h3>
-        <p>Your data is stored on Leopard's servers for as long as deemed necessary by your school's administrative
-            team. This can be from as little as 14 days to forever. Contact your school directly for more information.
+        <p>Your data is stored on Leopard's servers for as long as deemed necessary by <%= schoolFullName %>'s
+            administrative
+            team. This can be from as little as 14 days to forever. Contact <%= schoolFullName %> directly for more
+            information.
         </p>
         <h3>What rights you have over your data</h3>
-        <p>You can request for your data to be deleted by emailing your school's administrative team, however this data
+        <p>You can request for your data to be deleted by emailing <%= schoolFullName %>'s' administrative team,
+            however this data
             cannot be removed until 60 days after the data entered our systems.</p>
         <h3>Getting in touch</h3>
         <p>Queries regarding the Leopard service itself can be emailed to <a
                 href="mailto:noah@noahball.com">noah@noahball.com</a>. For queries regarding the use case and
-            application of Leopard, please contact your school directly.<br><br><b>Updated: 20/09/2021</b></p>
+            application of Leopard, please contact <%= schoolFullName %> directly.<br><br><b>Updated:
+                20/09/2021</b></p>
     </div>
+
+    <!-- Environment Values -->
+    <input id="schoolColour" type="text" style="display: none !important;" value="<%= schoolColour %>">
+    <input id="schoolTextColour" type="text" style="display: none !important;" value="<%= schoolTextColour %>">
+    <input id="recaptchaSite" type="text" style="display: none !important;" value="<%= recaptchaSite %>">
+
     <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
         <a href="/source">Source Code</a></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
+    <script src="/static/script.js"></script>
 </body>
 
 </html>
