--- a/views/results.ejs
+++ b/views/results.ejs
@@ -2,50 +2,57 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Results | Leopard</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Results | Leopard</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
-    <img class="school-logo" src="https://i0.wp.com/www.aquinas.school.nz/wp-content/uploads/2016/09/logo.png">
-    <h1 class="welcome">Query Results</h1>
-    <% if(resultsFound == true) { %><h5>Requested by <%= requestedBy %></h5><% } %>
-    
-    <div class="privacy-container">
-        <% if(resultsFound == true) { %>
-        <h3>Students who took Bus #<%= busNumber %> in the <%= timeOfDay %> on <%= date %></h3>
-        <table class="table table-dark">
-            <thead>
-              <tr>
-                <th scope="col">Full Name</th>
-                <th scope="col">Tutor Class</th>
-              </tr>
-            </thead>
-            <tbody>
-                <% for (var i = 0; i < students.length; i++) { %>
-              <tr>
-                <td><%= students[i] %></td>
-                <td><%= tutors[i] %></td>
-              </tr>
-              <% } %>
-            </tbody>
-          </table>
-        <% } else { %>
-        <h3>No results found.</h3>
+  <img class="school-logo" src="<%= schoolLogo %>">
+  <h1 class="welcome">Query Results</h1>
+  <% if(resultsFound == true) { %><h5>Requested by <%= requestedBy %></h5><% } %>
+
+  <div class="privacy-container">
+    <% if(resultsFound == true) { %>
+    <h3>Students who took Bus #<%= busNumber %> in the <%= timeOfDay %> on <%= date %></h3>
+    <table class="table table-dark">
+      <thead>
+        <tr>
+          <th scope="col">Full Name</th>
+          <th scope="col">Tutor Class</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% for (var i = 0; i < students.length; i++) { %>
+        <tr>
+          <td><%= students[i] %></td>
+          <td><%= tutors[i] %></td>
+        </tr>
         <% } %>
-        <h6><a class="back" href="/admin">Click here to go back</a></h6>
-    </div>
-    <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
-        <a href="/source">Source Code</a></p>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
-    </script>
+      </tbody>
+    </table>
+    <% } else { %>
+    <h3>No results found.</h3>
+    <% } %>
+    <h6><a class="back" href="/admin">Click here to go back</a></h6>
+  </div>
+
+  <!-- Environment Values -->
+  <input id="schoolColour" type="text" style="display: none !important;" value="<%= schoolColour %>">
+  <input id="schoolTextColour" type="text" style="display: none !important;" value="<%= schoolTextColour %>">
+  <input id="recaptchaSite" type="text" style="display: none !important;" value="<%= recaptchaSite %>">
+
+  <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
+    <a href="/source">Source Code</a></p>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+  </script>
+  <script src="/static/script.js"></script>
 </body>
 
 </html>
