--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-    <title>Login | Leopard</title>
+    <title>Login | <%= schoolFullName %></title>
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="/static/login.css" />
 </head>
 
 <body>
     <div id="login_div" class="main-div">
-        <h1>Leopard</h1>
+        <h1><%= schoolFullName %></h1>
         <input type="text" placeholder="Full Name" id="name_field" />
         <input type="email" placeholder="Email" id="email_field" />
         <input type="password" placeholder="Password" id="password_field" />
@@ -20,10 +20,13 @@
     </div>
 
     <div id="user_div" class="loggedin-div">
-        <h1>Leopard</h1>
+        <h1><%= schoolFullName %></h1>
         <p id="user_para">Loading...</p>
         <button onclick="logout()">Logout</button>
     </div>
+
+    <!-- Environment Values -->
+    <input id="schoolName" type="text" style="display: none !important;" value="<%= schoolName %>">
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
