--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -27,6 +27,7 @@
 
     <!-- Environment Values -->
     <input id="schoolName" type="text" style="display: none !important;" value="<%= schoolName %>">
+    <input id="schoolFullName" type="text" style="display: none !important;" value="<%= schoolFullName %>">
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
