Images no longer hotlink (yikes!)

--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -2,6 +2,6 @@
 
 <title>Leopard</title>
 <style>body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}</style>
-<img src="https://www.pngmart.com/files/3/Leopard-PNG-File.png" height="100">
-<br><br>
+<img src="/static/leopard.png" height="100">
+<br>
 <p><%- body %></p>
