--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -1,7 +1,54 @@
 <!-- This is Leopard. -->
 
-<title>Leopard</title>
+<!--<title>Leopard</title>
 <style>body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}</style>
 <img src="/static/leopard.png" height="100">
-<br>
-<p><%- body %></p>
+<h2><%= schoolFullName %></h2>
+<p><%- body %></p>-->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+
+    <!-- This is Leopard. -->
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Leopard | <%= schoolFullName %></title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+
+<body>
+    <img class="school-logo" src="<%= schoolLogo %>">
+    <h1 class="welcome"><%= schoolFullName %></h1>
+
+    <div class="privacy-container">
+        <% if(error == true) { %>
+        <h3>Something went wrong</h3>
+        <% } else { %>
+        <h3><%= schoolFullName %> uses Leopard</h3>
+        <% } %>
+        <p><%- body %></p>
+    </div>
+
+    <!-- Environment Values -->
+    <input id="schoolName" type="text" style="display: none !important;" value="<%= schoolName %>">
+    <input id="schoolFullName" type="text" style="display: none !important;" value="<%= schoolFullName %>">
+    <input id="schoolColour" type="text" style="display: none !important;" value="<%= schoolColour %>">
+    <input id="schoolTextColour" type="text" style="display: none !important;" value="<%= schoolTextColour %>">
+    <input id="recaptchaSite" type="text" style="display: none !important;" value="<%= recaptchaSite %>">
+
+    <p><br>Powered by Leopard, a check-in system for students by Noah Ball.<br><a href="/privacy">Privacy Policy</a> |
+        <a href="/source">Source Code</a></p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+    </script>
+    <script src="/static/script.js"></script>
+</body>
+
+</html>
